# django-admin-anchors

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/workflows/: lint.yml  test.yml  tests.yml
admin_anchors/: __init__.py  decorators.py  utils.py
tests/: admin.py  models.py  settings.py  smoke_test.py  test_decorators.py  test_utils.py
tests/project/gaming/: admin.py  models.py
tests/project/gaming/migrations/: 0001_initial.py  0002_optional_team_captain.py  0003_optional_profile_player.py
tests/project/project/: settings.py
tests/tests/: test_decorators.py  test_utils.py
