[tool.poetry]
name = "django-admin-anchors"
version = "3.0.0"
description = "Link related objects in Django admin using decorators"
license = "MIT"
authors = ["Jonathan Ehwald <github@ehwald.info>"]
readme = "README.md"
homepage = "https://github.com/DoctorJohn/django-admin-anchors"
repository = "https://github.com/DoctorJohn/django-admin-anchors"
documentation = "https://github.com/DoctorJohn/django-admin-anchors"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [ { include = "admin_anchors" } ]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
black = "^23.3.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
