[project]
name = "django-admin-anchors"
version = "4.3.0"
description = "Link related objects in Django admin using decorators"
authors = [{ name = "Jonathan Ehwald", email = "github@ehwald.info" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["django (>=4.2)"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
homepage = "https://github.com/DoctorJohn/django-admin-anchors"
repository = "https://github.com/DoctorJohn/django-admin-anchors"
documentation = "https://github.com/DoctorJohn/django-admin-anchors"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "admin_anchors" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pre-commit = "^4.0.1"
pytest = "^8.2.2"
pytest-cov = "^6.0.0"
pytest-django = "^4.5.2"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
addopts = "--cov=admin_anchors --cov-report term-missing --cov-report html"
